Fix unwanted space around modal close control on Safari

--- a/styles/generic/_sheet.scss
+++ b/styles/generic/_sheet.scss
@@ -18,6 +18,7 @@
   position: absolute;
   top: 0;
   border-radius: 0;
+  margin: 0;
   padding: 10px;
   box-sizing: content-box;
   // Fixed the vertical centering of the control icon if the control happens to
